--- a/pyramids.css
+++ b/pyramids.css
@@ -18,6 +18,11 @@ body {
   color: #ffffff;
   text-align: center;
 }
+header a {
+  color: #efefef;
+  text-decoration: none;
+  
+}
 
 /* =========================================================
                         Playing Cards
@@ -189,7 +194,7 @@ body {
   position: absolute;
   border: 2px dashed #dedede;
   padding: 5px;
-  left: 30%;
+  left: 5%;
 }
 
 #stats label {
